# libmadam

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  setup.py
libmadam_wrapper/: __init__.py
m4/: acx_fftw.m4  ax_f90_internal_headmod.m4  ax_prog_fc_mpi.m4
python/: setup.py
python/libmadam_wrapper/: __init__.py
python/tests/: test_libmadam.py  test_libmadam_mc.py
src/: Makefile.am  commonparam.f90  coordinate_conversion.f90  covmat.F90  covmat_util.F90  fits_routines.f90  fitsmod2.f90  fourier_fftw.f90  fourier_fftw_2003.f90  fourier_numres.f90  healpix_routines.f90  holefiller.f90  inputparam.f90  linebufmod.f90  ls_misc_utils.f90  madam.h  madamtest.f90  map_routines.f90  maps_and_baselines.f90  maptod_transfer.f90  maptod_transfer_coll.f90  matrix.f90  memory_and_time.f90  mpi_wrappers.f90  mpi_wrappers_serial.f90  noise_routines.f90  output.f90  parameter_control.f90  planck_config.F90  planck_types.f90  pointing.f90  read_data.f90  satellite.f90  simulation.f90  smadam.F90  smadam_routines.f90  submap_transfer.f90  test_covmat.f90  test_libmadam.c  test_libmadam.py  (+3 more)
tests/: test_libmadam.py  test_libmadam_mc.py
